# django-hrms

./: .dockerignore  .env_example  .gitignore  Dockerfile  README  pyproject.toml  requirements.txt
backend/apps/accounts/: models.py  urls.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/employees/: models.py  serializers.py  urls.py  views.py
backend/core/: settings.py  urls.py
